@@ -1,3 +1,8 @@
+2015-12-30  Benno Schulenberg  <bensberg@justemail.net>
+	* src/nano.c (main), src/files.c (open_buffer): Don't try to position
+	the cursor when opening a buffer failed (because the user specified a
+	directory, for example).  This fixes Savannah bug #46778.
+
 2015-12-29  Benno Schulenberg  <bensberg@justemail.net>
 	* doc/syntax/{c,objc,asm}.nanorc: Disable the regex for multiline
 	strings as it colours some things wrong and is a glutton on time.
